[package]
name = "riff"
version = "1.0.1"
authors = ["Francesco Bertolaccini <francesco@bertolaccini.dev>"]
description = "This crate provides utilities for reading and writing RIFF formatted files"
repository = "https://github.com/frabert/riff"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "frabert/riff" }
codecov = { repository = "frabert/riff" }
